2009-09-25 0.68 - H.Merijn Brand   <h.m.brand@xs4all.nl>

    * Attribute auto_diag now localizes to +1 if autodie is active
    * Output name generation in csv2xls (RT#48954)
    * Added csvdiff to examples/
    * Reordered docs. Rewrote SYNOPSIS to be more like a real-world
      code example

2009-08-08 0.67 - H.Merijn Brand   <h.m.brand@xs4all.nl>

    * Fix empty_diag typo for attribute handler
    * Fix AUTOMATED_TESTING erroneous skip

2009-08-07 0.66 - H.Merijn Brand   <h.m.brand@xs4all.nl>

    * Reordered examples in doc to show best method first
    * Documentation grammatical fix (John P. Linderman, RT#46411)
    * Fail if first arg to new () is not a hash ref
    * Implement empty_is_undef on request of Evan Carroll
    * Typo in documentation (Herwin Weststrate, RT#47613)
    * error_diag () uses warn () in void context instead of STDERR
    * Add auto_diag attribute (still under construction)
    * FIX: reset attributes (after they have been set) with accessor

2009-05-14 0.65 - H.Merijn Brand   <h.m.brand@xs4all.nl>

    * Initial known errors can now be checked on number (1002)
    * More tests for illegal combinations
    * Added -u option to examples/csv-check to validate utf-8 encoding
    * Correct documentation for error_diag () return value in case of
      constructor failure (Slaven, RT#46076)
    * All error_diag () returns should now be dual-var (both numeric
      and string context valid)
    * Remove (3) from L<..> links (Slaven, RT#46078)

2009-04-03 0.64 - H.Merijn Brand   <h.m.brand@xs4all.nl>

    * Skip perlio tests for perl older than 5.8, as perlio
      was experimental in 5.6
    * Up Devel::PPPort to 3.17
    * Fix initialization of eol => undef (could cause core dump)
    * Added configure_require to META.yml

2009-03-20 0.63 - H.Merijn Brand   <h.m.brand@xs4all.nl>

    * Fixed allow_whitespace with sep_char = TAB (RT#44402)

2009-03-13 0.62 - H.Merijn Brand   <h.m.brand@xs4all.nl>
