@@ -30,7 +30,7 @@ use DynaLoader ();
 use Carp;
 
 use vars   qw( $VERSION @ISA );
-$VERSION = "0.68";
+$VERSION = "0.69";
 @ISA     = qw( DynaLoader );
 bootstrap Text::CSV_XS $VERSION;
 
@@ -78,6 +78,7 @@ my %def_attr = (
     _ERROR_INPUT	=> undef,
     _COLUMN_NAMES	=> undef,
     _BOUND_COLUMNS	=> undef,
+    _AHEAD		=> undef,
     );
 my $last_new_err = Text::CSV_XS->SetDiag (0);
 
@@ -116,7 +117,8 @@ sub new
     $self;
     } # new
 
-my %_cache_id = (	# Keep in sync with XS!
+# Keep in sync with XS!
+my %_cache_id = ( # Only expose what is accessed from within PM
     quote_char		=>  0,
     escape_char		=>  1,
     sep_char		=>  2,
@@ -128,15 +130,10 @@ my %_cache_id = (	# Keep in sync with XS!
     allow_double_quoted	=>  8,
     allow_whitespace	=>  9,
     blank_is_undef	=> 10,
-
     eol			=> 11,	# 11 .. 18
-    eol_len		=> 19,
-    eol_is_cr		=> 20,
-    has_types		=> 21,
     verbatim		=> 22,
     empty_is_undef	=> 23,
     auto_diag		=> 24,
-
     _is_bound		=> 25,	# 25 .. 28
     );
 
@@ -147,10 +144,7 @@ sub _set_attr_C
     defined $val or $val = 0;
     $] >= 5.008002 and utf8::decode ($val);
     $self->{$name} = $val;
-    $self->{_CACHE} or return;
-    my @cache = unpack "C*", $self->{_CACHE};
-    $cache[$_cache_id{$name}] = unpack "C", $val;
-    $self->{_CACHE} = pack "C*", @cache;
+    $self->_cache_set ($_cache_id{$name}, $val);
     } # _set_attr_C
 
 # A flag
@@ -159,22 +153,15 @@ sub _set_attr_X
     my ($self, $name, $val) = @_;
     defined $val or $val = 0;
     $self->{$name} = $val;
-    $self->{_CACHE} or return;
-    my @cache = unpack "C*", $self->{_CACHE};
-    $cache[$_cache_id{$name}] = 0 + $val;
-    $self->{_CACHE} = pack "C*", @cache;
-    } # _set_attr_C
+    $self->_cache_set ($_cache_id{$name}, 0 + $val);
+    } # _set_attr_X
 
 # A number
 sub _set_attr_N
 {
     my ($self, $name, $val) = @_;
     $self->{$name} = $val;
-    $self->{_CACHE} or return;
-    my @cache = unpack "C*", $self->{_CACHE};
-    my $i = $_cache_id{$name};
-    $cache[$i++] = $_ for unpack "C*", pack "N", $val;
-    $self->{_CACHE} = pack "C*", @cache;
+    $self->_cache_set ($_cache_id{$name}, 0 + $val);
     } # _set_attr_N
 
 # Accessor methods.
@@ -216,19 +203,8 @@ sub eol
     if (@_) {
 	my $eol = shift;
 	defined $eol or $eol = "";
-	my $eol_len = length $eol;
 	$self->{eol} = $eol;
-	$self->{_CACHE} or return;
-	my @cache = unpack "C*", $self->{_CACHE};
-	if (($cache[$_cache_id{eol_len}] = $eol_len) < 8) {
-	    $cache[$_cache_id{eol_is_cr}] = $eol eq "\r" ? 1 : 0;
-	    }
-	else {
-	    $cache[$_cache_id{eol_is_cr}] = 0;
-	    }
-	$eol .= "\0\0\0\0\0\0\0\0";
-	$cache[$_cache_id{eol} + $_] = unpack "C", substr $eol, $_, 1 for 0 .. 7;
-	$self->{_CACHE} = pack "C*", @cache;
+	$self->_cache_set ($_cache_id{eol}, $eol);
 	}
     $self->{eol};
     } # eol
@@ -299,7 +275,7 @@ sub empty_is_undef
 sub verbatim
 {
     my $self = shift;
-    @_ and $self->_set_attr_C ("verbatim", shift);
+    @_ and $self->_set_attr_X ("verbatim", shift);
     $self->{verbatim};
     } # verbatim
 
@@ -1603,7 +1579,7 @@ has been selected with the constructor.
 Sequences like C<1,"foo\rbar",2> are only allowed when the binary option
 has been selected with the constructor.
 
-=item 2023 "EIQ - QUO character not allowed
+=item 2023 "EIQ - QUO character not allowed"
 
 Sequences like C<"foo "bar" baz",quux> and C<2023,",2008-04-05,"Foo, Bar",\n>
 will cause this error.
@@ -1661,7 +1637,7 @@ exhausted before the quote is found, that field is not terminated.
 
 =item 3007 "EHR - bind_columns needs refs to writeable scalars"
 
-=item 3008 "EHR - unexpected error in bound fields
+=item 3008 "EHR - unexpected error in bound fields"
 
 =back
 
