@@ -1,7 +1,9 @@
 #!/pro/bin/perl
 
 # csv-check: Check validity of CSV file and report
-#	   (m)'08 [10 Aug 2008] Copyright H.M.Brand 2007-2009
+#	   (m)'09 [12 Oct 2009] Copyright H.M.Brand 2007-2009
+
+# This code requires the defined-or feature and PerlIO
 
 use strict;
 use warnings;
@@ -9,7 +11,7 @@ use warnings;
 use Data::Peek;
 use Encode qw( decode );
 
-our $VERSION = "1.3";	# 2009-04-09
+our $VERSION = "1.4";	# 2009-10-12
 
 sub usage
 {
@@ -37,27 +39,19 @@ GetOptions (
 
 use Text::CSV_XS;
 
-if (@ARGV && -f $ARGV[0] && !-s $ARGV[0]) {
-    print STDERR "$ARGV[0] is empty\n";
-    exit 0;
-    }
+my $fn = $ARGV[0] // "-";
+my $data = do { local $/; <> } or die "No data to analyze\n";
 
-my ($bin, $rows, %cols, $firstline) = (0, 0);
+my ($bin, $rows, $eol, %cols) = (0, 0, undef);
 unless ($sep) { # No sep char passed, try to auto-detect;
-    while (<>) {
-	m/\S/ or next;	# Skip empty leading blank lines
-	$sep = m/["\d],["\d,]/ ? ","  :
-	       m/["\d];["\d;]/ ? ";"  :
-	       m/["\d]\t["\d]/ ? "\t" :
-	       # If neither, then for unquoted strings
-	       m/\w,[\w,]/     ? ","  :
-	       m/\w;[\w;]/     ? ";"  :
-	       m/\w\t[\w]/     ? "\t" :
-				 ","  ;
-	$firstline = $_;
-	$rows++;
-	last;
-	}
+    $sep = $data =~ m/["\d],["\d,]/ ? ","  :
+	   $data =~ m/["\d];["\d;]/ ? ";"  :
+	   $data =~ m/["\d]\t["\d]/ ? "\t" :
+	   # If neither, then for unquoted strings
+	   $data =~ m/\w,[\w,]/     ? ","  :
+	   $data =~ m/\w;[\w;]/     ? ";"  :
+	   $data =~ m/\w\t[\w]/     ? "\t" : ",";
+    $data =~ m/([\r\n]+)\Z/ and $eol = DDisplay "$1";
     }
 
 my $csv = Text::CSV_XS-> new ({
@@ -78,8 +72,9 @@ sub done
 	my @coll = sort { $a <=> $b } keys %cols;
 	local $" = ", ";
 	my $cols = @coll == 1 ? $coll[0] : "(@coll)";
+	defined $eol or $eol = $csv->eol || "--unknown--";
 	print "OK: rows: $rows, columns: $cols\n";
-	print "    sep = <$sep>, quo = <$quo>, bin = <$bin>\n";
+	print "    sep = <$sep>, quo = <$quo>, bin = <$bin>, eol = <$eol>\n";
 	exit 0;
 	}
 
@@ -116,12 +111,8 @@ sub stats
 	}
     } # stats
 
-if ($firstline) {
-    $csv->parse ($_) or done;
-    stats [ $csv->fields ];
-    }
-
-while (my $row = $csv->getline (*ARGV)) {
+open my $fh, "<", \$data or die "$fn: $!\n";
+while (my $row = $csv->getline ($fh)) {
     $rows++;
     stats $row;
     }
