@@ -313,12 +313,14 @@ foreach my $bin (0, 1) {
 	my @fld = $csv->fields;
 	is (@fld, 4,				"#\\r\\n $gc fields");
 	is ($fld[2], "Abe",			"#\\r\\n $gc fld 2");
-	is ($fld[3], "Timmerman#\r\n",		"#\\r\\n $gc fld 3");
+	is ($fld[3], $gc ? "Timmerman#\r\n"
+			 : "Timmerman#",	"#\\r\\n $gc fld 3");
 
 	ok ($csv->parse ($str[1]),		"#\\r\\n $gc parse");
 	@fld = $csv->fields;
 	is (@fld, 3,				"#\\r\\n $gc fields");
-	is ($fld[2], "Abe\nTimmerman#\r\n",	"#\\r\\n $gc fld 2");
+	is ($fld[2], $gc ? "Abe\nTimmerman#\r\n"
+			 : "Abe",		"#\\r\\n $gc fld 2");
 	}
 
     ok (1, "verbatim on getline (*FH)");
@@ -335,11 +337,13 @@ foreach my $bin (0, 1) {
 	ok ($row = $csv->getline (*FH),		"#\\r\\n $gc getline");
 	is (@$row, 4,				"#\\r\\n $gc fields");
 	is ($row->[2], "Abe",			"#\\r\\n $gc fld 2");
-	is ($row->[3], "Timmerman",		"#\\r\\n $gc fld 3");
+	is ($row->[3], $gc ? "Timmerman"
+			   : "Timmerman#",	"#\\r\\n $gc fld 3");
 
 	ok ($row = $csv->getline (*FH),		"#\\r\\n $gc parse");
 	is (@$row, 3,				"#\\r\\n $gc fields");
-	is ($row->[2], "Abe\nTimmerman",	"#\\r\\n $gc fld 2");
+	is ($row->[2], $gc ? "Abe\nTimmerman"
+			   : "Abe",		"#\\r\\n $gc fld 2");
 	}
 
     $gc = $csv->verbatim ();
